--- a/19_ceshi2/pages/soso/soso.wxml
+++ b/19_ceshi2/pages/soso/soso.wxml
@@ -1,16 +1,23 @@
 <view class="top">
 	<view class="topbox">
-		<image class="fdj" src="/images/fdj.png"></image>
-		<input placeholder="{{inputvalue}}" focus bindconfirm="search_han"></input>
+		<view class="kuang">
+			<image class="fdj" src="/images/fdj.png"></image>
+			<input placeholder="{{inputvalue}}" focus bindconfirm="confirmhan"></input>
+		</view>
 	</view>
-	<view class="cancel">取消</view>
+	<view class="cancelbtn">
+		取消
+	</view>
 </view>
 <view class="lsss_box">
-	<view class="lsss">
-		<view class="lsss_text">历史搜索</view>
-		<view class="ljt" bindtap="ljt_click">
-            <image src="/images/ljt.png"></image>
-        </view>
+	<view class="hd">
+		<view class="lsss">历史搜索</view>
+		<view class="ljt" bindtap="clearstorage">
+			<image src="/images/ljt.png"></image>
+		</view>
 	</view>
-    <view class="storage" wx:for="{{Storage}}" wx:key="index">{{item}}</view>
+	<view class="bd">
+		<view class="lishiword" wx:for="{{lishiwords}}" wx:key="index">{{item}}</view>
+	</view>
+
 </view>
