--- a/19_ceshi2/pages/index/index.wxss
+++ b/19_ceshi2/pages/index/index.wxss
@@ -1,21 +1,23 @@
-.topbox{
-    padding: 10px 20px;
-}
-.topbox .search{
-    width: 100%;
+.topbox {
     height: 30px;
-    background-color: #eee;
-    border-radius: 20px;
-    position: relative;
-    line-height: 30px;
-    font-size: 14px;
-    padding-left: 40px;
-    box-sizing: border-box;
+    padding: 6px 16px;
 }
-.topbox .search .fdj{
+
+.topbox .kuang {
+    width: 100%;
+    height: 100%;
+    background-color: #eee;
+    border-radius: 200px;
+    position: relative;
+    padding: 5px 40px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+.topbox .kuang .fdj {
     width: 20px;
     height: 20px;
     position: absolute;
     top: 5px;
-    left: 5px; 
+    left: 4px;
 }
