--- a/19_ceshi2/pages/soso/soso.wxss
+++ b/19_ceshi2/pages/soso/soso.wxss
@@ -1,67 +1,60 @@
-.top{
+.top {
     display: flex;
-    padding: 10px 20px;
 }
-.top .topbox{
+.topbox {
     flex: 1;
-    width: 100%;
     height: 30px;
-    background-color: #eee;
-    border-radius: 20px;
-    position: relative;
-    line-height: 30px;
-    font-size: 14px;
-    padding-left: 40px;
-    box-sizing: border-box;
-}
-.top .topbox input{
-    line-height: 30px;
-    height: 30px;
+    padding: 6px 16px;
 }
 
-.topbox  .fdj{
+.topbox .kuang {
+    width: 100%;
+    height: 100%;
+    background-color: #eee;
+    border-radius: 200px;
+    position: relative;
+    padding: 5px 40px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+
+.topbox .kuang .fdj {
     width: 20px;
     height: 20px;
     position: absolute;
     top: 5px;
-    left: 5px; 
+    left: 4px;
 }
-.top .cancel{
-    width: 50px;
-    line-height: 30px;
-    height: 30px;
+.top .cancelbtn {
+    width: 40px;
+    padding-top: 10px;
     font-size: 14px;
-    padding-left: 20px;
-    box-sizing: border-box;
+}
 
-}
+/* 历史搜索 */
 .lsss_box{
-    padding: 10px 20px;
-    font-size: 13px;
+    padding: 10px;
 }
-.lsss{
+.lsss_box .hd{
     overflow: hidden;
 }
+.lsss_box .lsss{
+    float: left;
+    font-size: 13px;
+}
 .lsss_box .ljt{
-    width: 20px;
-    height: 20px;
+    float: right;
 }
 .lsss_box .ljt image{
     width: 20px;
     height: 20px;
 }
-.lsss_text{
-    float: left;
-}
-.ljt{
-    float: right;
-}
-.storage{
+.lishiword{
     float: left;
     padding: 4px 6px;
     background: #eee;
+    margin-right: 10px;
+    border-radius: 10px;
     font-size: 14px;
     margin-top: 10px;
-    margin-right: 10px;
-    border-radius: 20px;
 }
