--- a/19_ceshi1/pages/index/index.wxss
+++ b/19_ceshi1/pages/index/index.wxss
@@ -1,6 +1,7 @@
-Page{
+Page {
     background: #eee;
 }
+
 .topstatusbar {
     width: 750rpx;
     height: 190px;
@@ -90,38 +91,79 @@ Page{
     left: 0;
 
 }
-.loadingtext{
+
+.loadingtext {
     text-align: center;
     line-height: 40px;
 }
-.xlm{
+
+.xlm {
     background: #eee;
 }
-.tuijian{
+
+.tuijian {
     width: 100%;
     background: white;
     border-radius: 10px;
     padding-top: 6px;
     padding-bottom: 6px;
 }
-.row{
+
+.row {
     overflow: hidden;
     display: flex;
     width: 100%;
     padding-top: 10px;
 }
-.row .grid{
+
+.row .grid {
     flex: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.row .grid .pic image{
-   width: 100rpx;
-   height: 100rpx;
+.row .grid .pic image {
+    width: 100rpx;
+    height: 100rpx;
 }
-.row .grid .word{
+
+.row .grid .word {
     font-size: 13px;
     color: #333;
+}
+
+/* 瀑布流 */
+.pbl {
+    display: flex;
+    padding: 10px;
+}
+
+.pbl .left {
+    flex: 1;
+}
+
+.pbl .right {
+    flex: 1;
+    margin-left: 10px;
+}
+
+.pbl .grid {
+    background: white;
+    border-radius: 6px;
+    margin-bottom: 10px;
+}
+
+.pbl .grid .pic {
+    /* width: 100%; */
+    /* 去掉白边，面试爱考小技巧，没有什么道理，设置垂直居中了（当然也不会垂直居中，它只能用于表格垂直居中） */
+    vertical-align: middle;
+}
+.pbl .grid .content{
+    padding: 5px;
+    font-size: 14px;
+}
+.pbl .grid .content .price{
+    font-size: 26px;
+    color: orange;
 }
