--- a/19_ceshi1/pages/index/myswiper.wxml
+++ b/19_ceshi1/pages/index/myswiper.wxml
@@ -1,5 +1,13 @@
 <template name="myswiper">
-    <view>
-        我是轮播图, 我收到的m是{{m}}
-    </view>    
+	<view class="myswiper">
+		<swiper indicator-dots="true" autoplay="true" interval="3000" duration="300" circular="true" style="width:{{windowWidth-20}}px;height:{{(windowWidth-20) / (640 / 200)}}px;margin: 0 auto;overflow: hidden;border-radius: 10px;">
+			<block wx:for="{{images}}" wx:key="*this">
+				<swiper-item>
+					<view class="swiper-item">
+						<image src="{{item}}" style="width:{{windowWidth-20}}px;height:{{(windowWidth-20) / (640 / 200)}}px;border-radius:10px;"></image>
+					</view>
+				</swiper-item>
+			</block>
+		</swiper>
+	</view>
 </template>
