首页的制作

--- a/19_ceshi1/components/drawer-inner/drawer-inner.wxml
+++ b/19_ceshi1/components/drawer-inner/drawer-inner.wxml
@@ -1,6 +1,6 @@
 <view>
 	<!-- wxml中不能调用slice函数，必须写到wxs中 -->
-	<wxs src="tool.wxs" module="tool" />
+	<wxs src="../../utils/tool.wxs" module="tool" />
 	<view wx:if="{{nowshow == 'main'}}">
 		<scroll-view scroll-y="true" style="height:{{windowHeight-51}}px">
 			<!-- 品牌筛选器 -->
