--- a/19_ceshi1/pages/index/icons.wxml
+++ b/19_ceshi1/pages/index/icons.wxml
@@ -1,5 +1,22 @@
+<wxs src="../../utils/tool.wxs" module="tool" />
 <template name="icons">
-    <view>
-        我是图标, 我收到的n是{{n}}
-    </view>    
+	<view class="icons">
+		<view class="row">
+			<view class="grid" wx:for="{{tool.myslice(images, 0, 5)}}" wx:key="*this">
+				<image src="http://192.168.43.106:3000/images/icons/{{item.pic}}"></image>
+				<view>
+					{{item.title}}
+				</view>
+			</view>
+		</view>
+        <view class="row">
+			<view class="grid" wx:for="{{tool.myslice(images, 5, 10)}}" wx:key="*this">
+				<image src="http://192.168.43.106:3000/images/icons/{{item.pic}}"></image>
+				<view>
+					{{item.title}}
+				</view>
+			</view>
+		</view>
+
+	</view>
 </template>
