首页的制作

--- a/19_ceshi1/pages/index/hotpro.wxml
+++ b/19_ceshi1/pages/index/hotpro.wxml
@@ -3,31 +3,95 @@
 		<view class="row">
 			<view class="grid">
 				<view class="title">
-                    {{g1.title}}
-                </view>
-				<view class="info">
-                    {{g1.info}}
-                </view>
+					{{g1.title}}
+				</view>
+				<view class="countdown">
+					<text class="sj">{{diff_h}}</text>
+					<text class="maohao">:</text>
+					<text class="sj">{{diff_m}}</text>
+					<text class="maohao">:</text>
+					<text class="sj">{{diff_s}}</text>
+				</view>
 				<view class="pbox">
 					<view class="pgrid">
 						<image src="http://192.168.43.106:3000/images/{{g1.p1}}"></image>
+						<view class="price">
+							￥{{g1.p1price}}
+						</view>
 					</view>
 					<view class="pgrid">
 						<image src="http://192.168.43.106:3000/images/{{g1.p2}}"></image>
+						<view class="price">
+							￥{{g1.p2price}}
+						</view>
 					</view>
 				</view>
 			</view>
 			<view class="grid">
 				<view class="title">
-                    {{g2.title}}
-                </view>
-				<view class="info"></view>
+					{{g2.title}}
+				</view>
+
 				<view class="pbox">
 					<view class="pgrid">
 						<image src="http://192.168.43.106:3000/images/{{g2.p1}}"></image>
+						<view class="price">
+							￥{{g2.p1price}}
+						</view>
 					</view>
 					<view class="pgrid">
 						<image src="http://192.168.43.106:3000/images/{{g2.p2}}"></image>
+						<view class="price">
+							￥{{g2.p2price}}
+						</view>
+					</view>
+				</view>
+			</view>
+		</view>
+		<view class="row row2">
+			<view class="grid">
+				<view class="title">
+					{{g1.title}}
+				</view>
+				<view class="countdown">
+					<text class="sj">{{diff_h}}</text>
+					<text class="maohao">:</text>
+					<text class="sj">{{diff_m}}</text>
+					<text class="maohao">:</text>
+					<text class="sj">{{diff_s}}</text>
+				</view>
+				<view class="pbox">
+					<view class="pgrid">
+						<image src="http://192.168.43.106:3000/images/{{g1.p1}}"></image>
+						<view class="price">
+							￥{{g1.p1price}}
+						</view>
+					</view>
+					<view class="pgrid">
+						<image src="http://192.168.43.106:3000/images/{{g1.p2}}"></image>
+						<view class="price">
+							￥{{g1.p2price}}
+						</view>
+					</view>
+				</view>
+			</view>
+			<view class="grid">
+				<view class="title">
+					{{g2.title}}
+				</view>
+
+				<view class="pbox">
+					<view class="pgrid">
+						<image src="http://192.168.43.106:3000/images/{{g2.p1}}"></image>
+						<view class="price">
+							￥{{g2.p1price}}
+						</view>
+					</view>
+					<view class="pgrid">
+						<image src="http://192.168.43.106:3000/images/{{g2.p2}}"></image>
+						<view class="price">
+							￥{{g2.p2price}}
+						</view>
 					</view>
 				</view>
 			</view>
