--- a/19_ceshi1/pages/category/category.wxml
+++ b/19_ceshi1/pages/category/category.wxml
@@ -1,11 +1,14 @@
+<!-- 自定义状态栏 -->
+<view class="topstatusbar"></view>
+
 <view class="page">
-	<view class="slider_bar" style="height:{{windowHeight}}px">
+	<view class="slider_bar" style="height:{{windowHeight - 91}}px">
 		<view wx:for="{{products_keys}}" wx:key="index" class="lm_left {{nowtype==item?'cur':''}}" bindtap="changetype" data-index="{{index}}" data-name="{{item}}">
 			{{item}}
 		</view>
 	</view>
-	<view class="content" style="height:{{windowHeight}}px">
-		<scroll-view scroll-y="true" style="height:{{windowHeight}}px" scroll-into-view="t{{nowid}}" scroll-with-animation="true" bindscroll="scrollHan">
+	<view class="content" style="height:{{windowHeight - 91}}px">
+		<scroll-view scroll-y="true" style="height:{{windowHeight - 91}}px" scroll-into-view="t{{nowid}}" scroll-with-animation="true" bindscroll="scrollHan">
 			<!-- 定义模板 -->
 			<template name="the_temp">
 				<view class="the_temp" id="t{{index}}">
