--- a/19_ceshi1/pages/index/index.wxss
+++ b/19_ceshi1/pages/index/index.wxss
@@ -8,6 +8,7 @@ Page {
     background-image: -webkit-linear-gradient(top, rgb(207, 22, 22), rgb(212, 79, 79));
     padding-top: 30px;
     box-sizing: border-box;
+    border-bottom: none;
 }
 
 .topstatusbar .logo {
