二手车细节展示

--- a/19_ceshi1/pages/cardetail/cardetail.wxss
+++ b/19_ceshi1/pages/cardetail/cardetail.wxss
@@ -1,1 +1,30 @@
-/* pages/cardetail/cardetail.wxss */
+/* 轮播图 */
+.myswiper {
+    width: 750rpx;
+    height: 500rpx;
+}
+
+.myswiper image {
+    width: 750rpx;
+    height: 500rpx;
+}
+
+/* 图片的导航 */
+.picnav {
+    display: flex;
+}
+.picnav .grid{
+    flex: 1;
+    text-align: center;
+    background: #eee;
+    border-right: 1px solid #ccc;
+    line-height: 30px;
+    font-size: 13px;
+}
+.picnav .grid:last-child{
+    border-right: none;
+}
+.picnav .grid.cur{
+    background: orange;
+    color: white;
+}
