--- a/19_ceshi1/pages/cardetail/cardetail.wxml
+++ b/19_ceshi1/pages/cardetail/cardetail.wxml
@@ -9,46 +9,25 @@
 
 	<!-- 轮播图 -->
 	<swiper class="myswiper" duration="300" circular="true" current="{{nowpicidx}}" bindchange="changeHan" bindtap="tapHan">
-		<!-- view -->
-		<block wx:for="{{result.images.view}}" wx:key="*this">
-			<swiper-item>
-				<view class="swiper-item">
-					<image src="http://aiqianduan.com:56506/images/carimages/{{result.id}}/view/{{item}}"></image>
-				</view>
-			</swiper-item>
-		</block>
-		<!-- inner -->
-		<block wx:for="{{result.images.inner}}" wx:key="*this">
-			<swiper-item>
-				<view class="swiper-item">
-					<image src="http://aiqianduan.com:56506/images/carimages/{{result.id}}/inner/{{item}}"></image>
-				</view>
-			</swiper-item>
-		</block>
-		<!-- engine -->
-		<block wx:for="{{result.images.engine}}" wx:key="*this">
-			<swiper-item>
-				<view class="swiper-item">
-					<image src="http://aiqianduan.com:56506/images/carimages/{{result.id}}/engine/{{item}}"></image>
-				</view>
-			</swiper-item>
-		</block>
-		<!-- more -->
-		<block wx:for="{{result.images.more}}" wx:key="*this">
-			<swiper-item>
-				<view class="swiper-item">
-					<image src="http://aiqianduan.com:56506/images/carimages/{{result.id}}/more/{{item}}"></image>
-				</view>
-			</swiper-item>
-		</block>
+		<view wx:for="{{result_arr_key}}" wx:key="*this" wx:for-item="key">
+			<block wx:for="{{result.images[key]}}" wx:key="*this">
+				<swiper-item>
+					<view class="swiper-item">
+						<image src="http://aiqianduan.com:56506/images/carimages/{{result.id}}/{{key}}/{{item}}"></image>
+					</view>
+				</swiper-item>
+			</block>
+		</view>
 	</swiper>
 
 	<!-- 图片的导航 -->
 	<view class="picnav">
 		<view class="grid {{nowalbum == 'view' ? 'cur' : ''}}" bindtap="changeAlbum" data-t="view">外观({{nowalbum == 'view' ? nowsmallpicidx + '/' : ''}}{{result.images.view.length}})</view>
+
 		<view class="grid {{nowalbum == 'inner' ? 'cur' : ''}}" bindtap="changeAlbum" data-t="inner">内饰({{nowalbum == 'inner' ? nowsmallpicidx + '/' : ''}}{{result.images.inner.length}})</view>
+
 		<view class="grid {{nowalbum == 'engine' ? 'cur' : ''}}" bindtap="changeAlbum" data-t="engine">发动机({{nowalbum == 'engine' ? nowsmallpicidx + '/' : ''}}{{result.images.engine.length}})</view>
+
 		<view class="grid {{nowalbum == 'more' ? 'cur' : ''}}" bindtap="changeAlbum" data-t="more">细节({{nowalbum == 'more' ? nowsmallpicidx + '/' : ''}}{{result.images.more.length}})</view>
 	</view>
-
 </view>
