--- a/weixin2/pages/index/index.wxss
+++ b/weixin2/pages/index/index.wxss
@@ -1,14 +1,48 @@
+.box{
+  display: flex;
+}
 .box .slidebar{
   width: 80px;
-  background-color: #eee;
-  text-align: center;
+  background-color: #ccc;
 }
 .box .slidebar .lm{
-  font-size: 14px;
   line-height: 40px;
   height: 40px;
+  text-align: center;
   border-left: 3px solid transparent;
 }
 .box .slidebar .lm.cur{
+  background-color: #fff;
   border-left: 3px solid orange;
+}
+.box .maincontent{
+  flex: 1;
+}
+.the_temp .bt{
+  font-size: 14px;
+  line-height: 40px;
+  height: 40px;
+  color: #f38;
+  text-shadow: 1px 1px 1px rgba(167, 167, 167, 0.5);
+  text-align: center;
+  font-weight: bold;
+}
+.content{
+  display: flex;
+  width: 90%;
+  margin-left: 10px;
+  border: 1px solid rgb(233, 233, 233);
+  box-sizing: border-box;
+  height: 110px;
+  margin-bottom: 10px;
+
+}
+.content image{
+  width: 100px;
+  height: 100px;
+}
+.content .wz{
+  flex: 1;
+  font-size: 12px;
+  margin-left: 10px;
 }
